<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.authentication.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/logo_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/lang2"
                android:textAlignment="center"
                android:textColor="#111"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="7dp"
                android:ems="50"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="#111"
                android:textCursorDrawable="@color/colorBlack" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="7dp"
                android:ems="50"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#111"
                android:textCursorDrawable="@color/colorBlack" />

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="7dp"
                android:ems="10"
                android:hint="@string/reap_passwd"
                android:inputType="textPassword"
                android:textColor="#111"
                android:textCursorDrawable="@color/colorBlack" />

            <EditText
                android:id="@+id/et_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="7dp"
                android:ems="10"
                android:hint="@string/passwd"
                android:inputType="textPassword"
                android:textColor="#111"
                android:textCursorDrawable="@color/colorBlack" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="302dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/mybutton"
                android:gravity="center"
                android:text="@string/sign"
                android:textAllCaps="true"
                android:textColor="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="end"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/have_account" />

            <Button
                android:id="@+id/btn_sign_in_register"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_margin="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/mybutton"
                android:text="@string/login" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>