<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.management.AddFlashcardActivity">

    <Button
        android:id="@+id/btn_save_flashcard_and_add_next"
        android:layout_width="158dp"
        android:layout_height="49dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/mybutton"
        android:text="@string/save_and_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_save_flashcard_and_back"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_save_flashcard_and_back"
        android:layout_width="158dp"
        android:layout_height="49dp"
        android:background="@drawable/mybutton"
        android:text="@string/save_and_go_yours_catalogs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_flashcard_and_add_next"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_flashcard_backside"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="121dp"
        android:layout_height="23dp"
        android:background="@drawable/mybutton"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_flashcard_and_add_next"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_flashcard_backside"
        app:layout_constraintVertical_bias="0.532" />

    <TextView
        android:id="@+id/tv_add_flashcard"
        style="@android:style/Widget.DeviceDefault.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_flashcard"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/et_new_flashcard_frontside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/new_flashcard_frontside"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_flashcard_frontside"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_new_flashcard_backside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_flashcard_backside"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_flashcard_backside"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/tv_new_flashcard_frontside"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_flashcard_frontside"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_flashcard"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/tv_new_flashcard_backside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_flashcard_backside"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_flashcard_frontside"
        app:layout_constraintVertical_bias="0.02" />

</androidx.constraintlayout.widget.ConstraintLayout>